bug: Remover a wrap that was bugging on desktop

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ a {
 
 .main {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 30px;
     padding-bottom: 30px;
     justify-content: center;
